@@ -30,12 +30,6 @@ set execsrc "${srcdir}/${subdir}/${srcfile}"
 
 remote_exec build "rm -f ${binfile}"
 
-# Are we on a target board?  No support for downloading shared libraries
-# to a target yet.
-if ![isnative] then {
-    return 0
-}
-
 # get the value of gcc_compiled
 if [get_compiler_info ${binfile}] {
     return -1
@@ -51,6 +45,7 @@ gdb_exit
 gdb_start
 gdb_reinitialize_dir $srcdir/$subdir
 gdb_load ${binfile}
+gdb_load_shlibs ${libobj}
 
 if ![runto_main] then {
     fail "Can't run to main"
